--- a/index.html
+++ b/index.html
@@ -4,9 +4,95 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=h, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Студія</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <header>
+      <a href="index.html">Web studio</a>
+      <nav>
+        <ul>
+          <li><a href="#">Студія</a></li>
+          <li><a href="#">Портфоліо</a></li>
+          <li><a href="#">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+    <main>
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <section>
+        <h2>Наші особливості</h2>
+        <ul>
+          <li>
+            <h3>Увага до деталей</h3>
+            Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+          </li>
+          <li>
+            <h3>Пунктуальність</h3>
+            Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+          </li>
+          <li>
+            <h3>Планування</h3>
+            Так само консультація з широким активом значною мірою зумовлює.
+          </li>
+          <li>
+            <h3>Сучасні технології</h3>
+            Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li><img src="./images/img.jpg" alt="coding" width="370" /></li>
+          <li><img src="./images/img-1.jpg" alt="phone set" width="370" /></li>
+          <li><img src="./images/img-2.jpg" alt="web design" width="370" /></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша Команда</h2>
+        <ul>
+          <li>
+            <img src="/images/img-3.jpg" alt="photo1" width="270" />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/img-4.jpg" alt="photo2" width="270" />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/img-5.jpg" alt="photo3" width="270" />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/img-6.jpg" alt="photo4" width="270" />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="index.html">Web studio</a>
+      <ul>
+        <li>
+          <a
+            href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+            >м. Київ, пр-т Лесі Українки, 26</a
+          >
+        </li>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
