--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -61,22 +61,22 @@
           <li>
             <img src="/images/img-3.jpg" alt="photo1" width="270" />
             <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/img-4.jpg" alt="photo2" width="270" />
             <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img-5.jpg" alt="photo3" width="270" />
             <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/img-6.jpg" alt="photo4" width="270" />
             <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
