--- a/index.html
+++ b/index.html
@@ -1,236 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Summary</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <meta name="viewport" content="width=h, initial-scale=1.0" />
+    <title>Студія</title>
   </head>
   <body>
-    <div class="flex-container">
-      <div class="side-bar">
-        <div class="wrapper-photo">
-          <img width="240" src="./img/Den.jpg" alt="" />
-        </div>
-        <div class="wrapper-side-bar">
-          <h2 class="contact">Contact information</h2>
-          <ul class="list-contact">
-            <li class="item-contact">
-              <svg width="30" height="20" class="svg-social">
-                <use href="./img//sprit.svg#icon-phone"></use>
-              </svg>
-              <a class="link-social" href="tel:+380992232241">+38 099-223-22-41</a>
-            </li>
-            <li class="item-contact">
-              <svg width="30" height="20" class="svg-social">
-                <use href="./img//sprit.svg#icon-mail"></use>
-              </svg>
-              <a class="link-social" href="malito:denisbaranovskiy1991@gmail.com"
-                >denisbaranovskiy1991@gmail.com</a
-              >
-            </li>
-            <li class="item-contact">
-              <svg width="30" height="20" class="svg-social">
-                <use href="./img//sprit.svg#icon-telegram"></use>
-              </svg>
-              <a href="https://t.me/DenisBaranovskij" class="link-social rmv-link"> Telegram </a>
-            </li>
-            <li class="item-contact">
-              <svg width="30" height="20" class="svg-social">
-                <use href="./img//sprit.svg#icon-github"></use>
-              </svg>
-              <a href="https://github.com/Djucbko" class="link-social rmv-link"> GitHub </a>
-            </li>
-            <li class="item-contact">
-              <svg width="30" height="20" class="svg-social">
-                <use href="./img//sprit.svg#icon-linkedin"></use>
-              </svg>
-              <a
-                href="https://www.linkedin.com/in/denis-baranovskij-29b321265//"
-                class="link-social rmv-link"
-              >
-                Linkedin
-              </a>
-            </li>
-            <li class="item-contact city">
-              <svg width="30" height="20" class="svg-social">
-                <use href="./img//sprit.svg#icon-location"></use>
-              </svg>
-              <span class="city">Kropyvnytskyi, Ukraine</span>
-            </li>
-          </ul>
-          <h2 class="tech-skills">Tech Skills</h2>
-          <ul class="list-tech-skills">
-            <li class="item-tech-skills">
-              <p class="desc-tech-skills">HTML5/CSS3/SASS</p>
-            </li>
-            <li class="item-tech-skills">
-              <p class="desc-tech-skills">Responsive/Adaptive design</p>
-            </li>
-            <li class="item-tech-skills">
-              <p class="desc-tech-skills">JavaScript</p>
-            </li>
-            <li class="item-tech-skills">
-              <p class="desc-tech-skills">React</p>
-            </li>
-            <li class="item-tech-skills">
-              <p class="desc-tech-skills">Redux</p>
-            </li>
-            <li class="item-tech-skills">
-              <p class="desc-tech-skills">REST API</p>
-            </li>
-            <li class="item-tech-skills">
-              <p class="desc-tech-skills">Node.js</p>
-            </li>
-          </ul>
-          <h2 class="soft-skills">SOFT SKILLS</h2>
-          <ul class="list-soft-skills">
-            <li class="item-soft-skills">
-              <p class="desc-soft-skills">Team Work</p>
-            </li>
-            <li class="item-soft-skills">
-              <p class="desc-soft-skills">High Analytics Skills</p>
-            </li>
-            <li class="item-soft-skills">
-              <p class="desc-soft-skills">Problem Solving</p>
-            </li>
-            <li class="item-soft-skills">
-              <p class="desc-soft-skills">Focus on Results</p>
-            </li>
-            <li class="item-soft-skills">
-              <p class="desc-soft-skills">Flexible</p>
-            </li>
-          </ul>
-          <h2 class="languages">LANGUAGES</h2>
-          <ul class="list-languages">
-            <li class="item-languages">
-              <p class="desc-languages">English - Elementary</p>
-            </li>
-            <li class="item-languages">
-              <p class="desc-languages">Ukrainian - Native</p>
-            </li>
-            <li class="item-languages">
-              <p class="desc-languages">Russian - Native</p>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="main">
-        <div class="title-name">
-          <h1 class="name">Denis Baranovskij</h1>
-          <p class="pos">junior frontend developer</p>
-        </div>
-        <div class="main-content">
-          <div class="summary">
-            <h2 class="summary-title">Summary</h2>
-            <p class="desk">
-              I am a junior frontend developer, learning javascript and writing in React.js. I am
-              well versed in HTML, CSS, JavaScript, SASS, Webpack, BEM methodology, React. I also
-              improve my English. I took part in three team projects, where I learned how to work in
-              a team, work in the Trello system, communicate with other developers, solve technical
-              problems and help other developers in solving their problems and complete all tasks
-              within the deadline. I also learned to analyze problems and think of solutions for
-              precise troubleshooting. I am looking for a team of my dreams that will benefit from
-              my knowledge and experience, in return I expect development together with the company
-              and the team. I am a fast learner,responsible and always ready to take on a challenge.
-            </p>
-          </div>
-          <div class="experiense">
-            <h2 class="title-prodject">Project experience</h2>
-            <ul class="list-projects">
-              <li class="item-prodject">
-                <p class="desc-prodject">
-                  <a class="link-prj" href="https://petro-psekho.github.io/group-project-06/"
-                    >IceCreame</a
-                  >
-                  ,<a class="link-prj" href="https://github.com/Petro-Psekho/group-project-06"
-                    >Link</a
-                  >
-                  <br />
-                  <b>[HTML, SASS, JS, Parcel] </b><br />
-                  Ice company website with responsive layout, burger menu, modal window and
-                  attractive Role: Developer. On this project, I was responsible for the button buy
-                  now and modal window which this button open, as well as the animation of the site
-                  and the connection of a smooth scroll.
-                </p>
-              </li>
-              <li class="item-prodject">
-                <p class="desc-prodject">
-                  <a class="link-prj" href="https://thisnarciss.github.io/filmoteka-team-project/"
-                    >Filmoteka</a
-                  >
-                  ,<a class="link-prj" href="https://github.com/ThisNarciss/filmoteka-team-project/"
-                    >Link</a
-                  >
-                  <br />
-                  <b>[HTML, SASS, JS, Parcel, REST API, LocaleStorage]</b>
-                  <br />
-                  Application for choosing a movie. Role: Developer. In this project, I worked with
-                  local storage, wrote all the project logic for storing data received from the
-                  user. I was also responsible for the library page. The logic of switching buttons
-                  and storing movies.
-                </p>
-              </li>
-              <li class="item-prodject">
-                <p class="desc-prodject">
-                  <a class="link-prj" href="https://djucbko.github.io/goit-markup-hw-08/"
-                    >WebStudio</a
-                  >
-                  ,<a class="link-prj" href="https://github.com/Djucbko/goit-markup-hw-08/">Link</a>
-                  <br />
-                  <b>[HTML, SASS, JS]</b>
-                  <br />
-                  Individual project. A website with a responsive layout for company which create
-                  websites. My task was development of site in three versions according to layout
-                  and specifications.
-                </p>
-              </li>
-            </ul>
-          </div>
-          <!-- <div class="work">
-            <h2>Work experiense</h2>
-            <h3 class="job-title">Work</h3>
-            <p class="desc-job">Company</p>
-          </div> -->
-          <div class="education">
-            <h2 class="title-education">Work experience</h2>
-            <ul class="list-education">
-              <li class="item-education">
-                <h3 class="name-education">Bakery Entrepreneur</h3>
-                <p class="desc-time">October 2014 - by now | Ukraine</p>
-                <p class="desc-pos">
-                  Sale of raw materials for bakery products and confectionery. Achievement: I
-                  brought more than five hundred clients in our region with whom I do business,
-                  expanded the range of goods and services.
-                </p>
-              </li>
-            </ul>
-          </div>
-          <div class="education">
-            <h2 class="title-educations">Education</h2>
-            <ul class="list-education">
-              <li class="item-education">
-                <h3 class="name-education">IT School GoIT</h3>
-                <p class="desc-time">2022-2023</p>
-                <p class="desc-pos">Fullstack developer</p>
-              </li>
-              <li class="item-education">
-                <h3 class="name-education">National Aviation University</h3>
-                <p class="desc-time">2008-2013</p>
-                <p class="desc-pos">Air traffic controller</p>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script src="./index.js" type="module"></script>
+    <header>
+      <a href="index.html">Web studio</a>
+      <nav>
+        <ul>
+          <li><a href="#">Студія</a></li>
+          <li><a href="#">Портфоліо</a></li>
+          <li><a href="#">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+    <main>
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <section>
+        <h2>Наші особливості</h2>
+        <ul>
+          <li>
+            <h3>Увага до деталей</h3>
+            Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+          </li>
+          <li>
+            <h3>Пунктуальність</h3>
+            Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+          </li>
+          <li>
+            <h3>Планування</h3>
+            Так само консультація з широким активом значною мірою зумовлює.
+          </li>
+          <li>
+            <h3>Сучасні технології</h3>
+            Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li><img src="./images/img.jpg" alt="coding" width="370" /></li>
+          <li><img src="./images/img-1.jpg" alt="phone set" width="370" /></li>
+          <li><img src="./images/img-2.jpg" alt="web design" width="370" /></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша Команда</h2>
+        <ul>
+          <li>
+            <img src="/images/img-3.jpg" alt="photo1" width="270" />
+            <h3>Ігор Дем'яненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/img-4.jpg" alt="photo2" width="270" />
+            <h3>Ольга Рєпіна</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/img-5.jpg" alt="photo3" width="270" />
+            <h3>Микола Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/img-6.jpg" alt="photo4" width="270" />
+            <h3>Михайло Єрмаков</h3>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="index.html">Web studio</a>
+      <ul>
+        <li>
+          <a
+            href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+            >м. Київ, пр-т Лесі Українки, 26</a
+          >
+        </li>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
